# space_sim

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  manifest
.agents/commands/: generate-ship-ai-sprite-wave.md  regenerate-ship-reference-renders.md  zip-ship-reference-vantage-points.md
.beads/: config.yaml  issues.jsonl  metadata.json
assets/debug/: forward_arrow.npmesh  forward_axis_fin_down.npmesh  forward_axis_fin_up.npmesh  forward_axis_marker.npmesh
assets/ships/centurion/: atlas_manifest.json
assets/ships/centurion/renders/: manifest.json
assets/ships/centurion/sprites/: centurion_az000_el+000_newmodel_512_clean_cell.lights.json  centurion_az000_el+030_newmodel_512_clean_cell.lights.json  centurion_az000_el+060_newmodel_512_clean_cell.lights.json  centurion_az000_el+090_newmodel_512_clean_cell.lights.json  centurion_az000_el-030_newmodel_512_clean_cell.lights.json  centurion_az000_el-060_newmodel_512_clean_cell.lights.json  centurion_az000_el-090_newmodel_512_clean_cell.lights.json  centurion_az022p5_el+000_newmodel_512_clean_cell.lights.json  centurion_az022p5_el+030_newmodel_512_clean_cell.lights.json  centurion_az022p5_el+060_newmodel_512_clean_cell.lights.json  centurion_az022p5_el-030_newmodel_512_clean_cell.lights.json  centurion_az022p5_el-060_newmodel_512_clean_cell.lights.json  centurion_az045_el+000_newmodel_512_clean_cell.lights.json  centurion_az045_el+030_newmodel_512_clean_cell.lights.json  centurion_az045_el+060_newmodel_512_clean_cell.lights.json  centurion_az045_el-030_newmodel_512_clean_cell.lights.json  centurion_az045_el-060_newmodel_512_clean_cell.lights.json  centurion_az067p5_el+000_newmodel_512_clean_cell.lights.json  centurion_az067p5_el+030_newmodel_512_clean_cell.lights.json  centurion_az067p5_el+060_newmodel_512_clean_cell.lights.json  centurion_az067p5_el-030_newmodel_512_clean_cell.lights.json  centurion_az067p5_el-060_newmodel_512_clean_cell.lights.json  centurion_az090_el+000_newmodel_512_clean_cell.lights.json  centurion_az090_el+030_newmodel_512_clean_cell.lights.json  centurion_az090_el+060_newmodel_512_clean_cell.lights.json  centurion_az090_el-030_newmodel_512_clean_cell.lights.json  centurion_az090_el-060_newmodel_512_clean_cell.lights.json  centurion_az112p5_el+000_newmodel_512_clean_cell.lights.json  centurion_az112p5_el+030_newmodel_512_clean_cell.lights.json  centurion_az112p5_el+060_newmodel_512_clean_cell.lights.json  centurion_az112p5_el-030_newmodel_512_clean_cell.lights.json  centurion_az112p5_el-060_newmodel_512_clean_cell.lights.json  centurion_az135_el+000_newmodel_512_clean_cell.lights.json  centurion_az135_el+030_newmodel_512_clean_cell.lights.json  centurion_az135_el+060_newmodel_512_clean_cell.lights.json  centurion_az135_el-030_newmodel_512_clean_cell.lights.json  centurion_az135_el-060_newmodel_512_clean_cell.lights.json  centurion_az157p5_el+000_newmodel_512_clean_cell.lights.json  centurion_az157p5_el+030_newmodel_512_clean_cell.lights.json  centurion_az157p5_el+060_newmodel_512_clean_cell.lights.json  (+44 more)
assets/ships/galaxy/: atlas_manifest.json  ship.json
assets/ships/galaxy/renders/: manifest.json
assets/ships/galaxy/sprites/: batch_log.txt  batch_manifest.json  galaxy_az000_el+000_newmodel_512_clean_cell.lights.json  galaxy_az000_el+030_newmodel_512_clean_cell.lights.json  galaxy_az000_el+060_newmodel_512_clean_cell.lights.json  galaxy_az000_el+090_newmodel_512_clean_cell.lights.json  galaxy_az000_el-030_newmodel_512_clean_cell.lights.json  (+79 more)
assets/ships/orion/: atlas_manifest.json
assets/ships/talon/: .elswap_applied  .feather_applied  atlas_manifest.json  atlas_manifest.tuning.json  atlas_manifest_church_of_man_wcnews.json  atlas_manifest_militia_wcnews.json  atlas_manifest_pirate_wcnews.json  ship.json  talon.materials.json  talon.npmesh
assets/ships/tarsus/: .feather_applied  atlas_manifest.json  atlas_manifest.legacy_8x4.json  atlas_manifest.tuning.json  ship.json  tarsus.materials.json  tarsus.npmesh
assets/skybox/troy/: troy_manifest.json
assets/sprites/: batch_log.txt  batch_manifest.json  mining_base.lights.json
assets/systems/: arden_reach.json  centurion_atlas.json  centurion_sprite_atlas.json  crimson_veil.json  deep_void.json  galaxy_atlas.json  galaxy_sprite_atlas.json  gliese.json  hadrians_gate.json  orion_atlas.json  orion_sprite_atlas.json  talon_atlas.json  talon_compare.json  talon_compare_wcnews.json  talon_sprite_atlas.json  tarsus_atlas.json  troy.json
docs/: ARCHITECTURE_TEXTURES.md  privateer_ship_data.json
shaders/: asteroid.glsl  atmosphere.glsl  dust.glsl  mesh.glsl  post_blur.glsl  post_composite.glsl  skybox.glsl  sprite.glsl  sprite_spot.glsl  sun.glsl  sun_gas.glsl  sun_glow.glsl
src/: armor.cpp  armor.h  asteroid.cpp  asteroid.h  atlas_grid_viewer.cpp  atlas_grid_viewer.h  camera.cpp  camera.h  cockpit_hud.cpp  cockpit_hud.h  debug_panel.cpp  debug_panel.h  dev_remote.cpp  dev_remote.h  dev_remote_macos.mm  dust.cpp  dust.h  explosion.cpp  explosion.h  faction.cpp  faction.h  firing.cpp  firing.h  gun.cpp  gun.h  json.cpp  json.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  mesh_cache.cpp  mesh_cache.h  mesh_render.cpp  mesh_render.h  mesh_render_atmosphere.cpp  mobility.cpp  mobility.h  obj_loader.cpp  (+41 more)
tools/: auto_author_engine_lights.py  batch_generate_ship_sprites.py  build_ship_atlas_manifest.py  build_wcnews_atlas.py  center_ship_atlas_cells.py  clean_sprite_alpha.py  compare_sprite_atlas_to_render.py  crush_bright_pixels.py  download_wcnews_ship_sprites.py  feather_sprite_edges.py  finetune_ship_sprite.py  full_ship_sprite_pipeline.py  gen_icosphere.py  gen_skybox.sh  generate_ship_sprite_job.py  generate_talon_no_canon_trials.py  import_wcu_meshes.sh  make_sprite_contact_sheet.py  mirror_symmetric_ship_frames.py  render_ship_atlas.py  repaint_ship_diffuse.py  repixelize_from_raws.py  swap_atlas_elevation.py  synthesize_mirrored_ship_sprites.py  tour_ship_sprite_atlas.sh  vflip_ship_sprites.py  visualize_wcnews_layout.py  wcnews_layout.py
tools/pixelart/: __init__.py  batch_generate.py  generate_sprite.py
(+588 files in other folders)
